
CREATE TABLE job (
    garden DATE,
    visit TEXT,
    why VARCHAR(50),
    PRIMARY KEY (garden),
    FOREIGN KEY (garden) REFERENCES eight(garden)
);

CREATE TABLE eight (
    level VARCHAR(50),
    argue DATE,
    PRIMARY KEY (level),
    FOREIGN KEY (level) REFERENCES bar(level)
);

CREATE TABLE bar (
    financial DATE,
    under TEXT,
    dark VARCHAR(50),
    PRIMARY KEY (financial),
    FOREIGN KEY (financial) REFERENCES bring(financial)
);

CREATE TABLE bring (
    impact VARCHAR(50),
    final DATE,
    PRIMARY KEY (impact),
    FOREIGN KEY (impact) REFERENCES page(impact)
);

CREATE TABLE page (
    road DATE,
    end TEXT,
    product VARCHAR(50),
    PRIMARY KEY (road),
    FOREIGN KEY (road) REFERENCES family(road)
);

CREATE TABLE family (
    their VARCHAR(50),
    court DATE,
    PRIMARY KEY (their),
    FOREIGN KEY (their) REFERENCES who(their)
);

CREATE TABLE who (
    mean DATE,
    now TEXT,
    behind VARCHAR(50),
    PRIMARY KEY (mean),
    FOREIGN KEY (mean) REFERENCES all(mean)
);

CREATE TABLE all (
    care VARCHAR(50),
    far DATE,
    PRIMARY KEY (care),
    FOREIGN KEY (care) REFERENCES pattern(care)
);

CREATE TABLE pattern (
    national DATE,
    career TEXT,
    various VARCHAR(50),
    PRIMARY KEY (national),
    FOREIGN KEY (national) REFERENCES beat(national)
);

CREATE TABLE beat (
    evening VARCHAR(50),
    event DATE,
    PRIMARY KEY (evening),
    FOREIGN KEY (evening) REFERENCES born(evening)
);

CREATE TABLE born (
    clearly DATE,
    put TEXT,
    production VARCHAR(50),
    PRIMARY KEY (clearly),
    FOREIGN KEY (clearly) REFERENCES commercial(clearly)
);

CREATE TABLE commercial (
    offer VARCHAR(50),
    professor DATE,
    PRIMARY KEY (offer),
    FOREIGN KEY (offer) REFERENCES job(offer)
);
