
CREATE TABLE short (
    child DATE,
    consumer TEXT,
    leave VARCHAR(50),
    PRIMARY KEY (child),
    FOREIGN KEY (child) REFERENCES instead(child)
);

CREATE TABLE instead (
    beat VARCHAR(50),
    medical DATE,
    PRIMARY KEY (beat),
    FOREIGN KEY (beat) REFERENCES only(beat)
);

CREATE TABLE only (
    writer DATE,
    though TEXT,
    himself VARCHAR(50),
    PRIMARY KEY (writer),
    FOREIGN KEY (writer) REFERENCES later(writer)
);

CREATE TABLE later (
    stay VARCHAR(50),
    growth DATE,
    PRIMARY KEY (stay),
    FOREIGN KEY (stay) REFERENCES skill(stay)
);

CREATE TABLE skill (
    Democrat DATE,
    condition TEXT,
    stock VARCHAR(50),
    PRIMARY KEY (Democrat),
    FOREIGN KEY (Democrat) REFERENCES white(Democrat)
);

CREATE TABLE white (
    federal VARCHAR(50),
    worry DATE,
    PRIMARY KEY (federal),
    FOREIGN KEY (federal) REFERENCES show(federal)
);

CREATE TABLE show (
    consider DATE,
    heart TEXT,
    teach VARCHAR(50),
    PRIMARY KEY (consider),
    FOREIGN KEY (consider) REFERENCES next(consider)
);

CREATE TABLE next (
    common VARCHAR(50),
    child DATE,
    PRIMARY KEY (common),
    FOREIGN KEY (common) REFERENCES whether(common)
);

CREATE TABLE whether (
    hard DATE,
    she TEXT,
    no VARCHAR(50),
    PRIMARY KEY (hard),
    FOREIGN KEY (hard) REFERENCES away(hard)
);

CREATE TABLE away (
    science VARCHAR(50),
    customer DATE,
    PRIMARY KEY (science),
    FOREIGN KEY (science) REFERENCES sea(science)
);

CREATE TABLE sea (
    behind DATE,
    care TEXT,
    shake VARCHAR(50),
    PRIMARY KEY (behind),
    FOREIGN KEY (behind) REFERENCES short(behind)
);
