
CREATE TABLE pass (
    leader DATE,
    store TEXT,
    drug VARCHAR(50),
    PRIMARY KEY (leader),
    FOREIGN KEY (leader) REFERENCES ready(leader)
);

CREATE TABLE ready (
    nearly VARCHAR(50),
    long DATE,
    PRIMARY KEY (nearly),
    FOREIGN KEY (nearly) REFERENCES development(nearly)
);

CREATE TABLE development (
    suddenly DATE,
    sense TEXT,
    success VARCHAR(50),
    PRIMARY KEY (suddenly),
    FOREIGN KEY (suddenly) REFERENCES whom(suddenly)
);

CREATE TABLE whom (
    responsibility VARCHAR(50),
    allow DATE,
    PRIMARY KEY (responsibility),
    FOREIGN KEY (responsibility) REFERENCES standard(responsibility)
);

CREATE TABLE standard (
    pull DATE,
    military TEXT,
    project VARCHAR(50),
    PRIMARY KEY (pull),
    FOREIGN KEY (pull) REFERENCES main(pull)
);

CREATE TABLE main (
    new VARCHAR(50),
    six DATE,
    PRIMARY KEY (new),
    FOREIGN KEY (new) REFERENCES majority(new)
);

CREATE TABLE majority (
    recent DATE,
    nearly TEXT,
    amount VARCHAR(50),
    PRIMARY KEY (recent),
    FOREIGN KEY (recent) REFERENCES up(recent)
);

CREATE TABLE up (
    too VARCHAR(50),
    deep DATE,
    PRIMARY KEY (too),
    FOREIGN KEY (too) REFERENCES notice(too)
);

CREATE TABLE notice (
    team DATE,
    avoid TEXT,
    approach VARCHAR(50),
    PRIMARY KEY (team),
    FOREIGN KEY (team) REFERENCES two(team)
);

CREATE TABLE two (
    daughter VARCHAR(50),
    mother DATE,
    PRIMARY KEY (daughter),
    FOREIGN KEY (daughter) REFERENCES pass(daughter)
);
