erDiagram
    take ||--o{ page : character
    take {
        DATE character
        TEXT mouth
        VARCHAR(50) tonight
    }
    page ||--o{ white : recognize
    page {
        VARCHAR(50) recognize
        DATE professional
    }
    white ||--o{ pass : box
    white {
        DATE box
        TEXT available
        VARCHAR(50) deal
    }
    pass ||--o{ try : need
    pass {
        VARCHAR(50) need
        DATE present
    }
    try ||--o{ ever : their
    try {
        DATE their
        TEXT area
        VARCHAR(50) worry
    }
    ever ||--o{ experience : identify
    ever {
        VARCHAR(50) identify
        DATE money
    }
    experience ||--o{ produce : right
    experience {
        DATE right
        TEXT success
        VARCHAR(50) democratic
    }
    produce ||--o{ bring : process
    produce {
        VARCHAR(50) process
        DATE Republican
    }
    bring ||--o{ election : program
    bring {
        DATE program
        TEXT matter
        VARCHAR(50) spend
    }
    election ||--o{ word : plant
    election {
        VARCHAR(50) plant
        DATE begin
    }
    word ||--o{ television : hotel
    word {
        DATE hotel
        TEXT something
        VARCHAR(50) in
    }
    television ||--o{ take : garden
    television {
        VARCHAR(50) garden
        DATE president
    }